--- a/FileManagers/FileManagers/Views/Home/Index.cshtml
+++ b/FileManagers/FileManagers/Views/Home/Index.cshtml
@@ -1,8 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trang chủ</title>
+
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link href="~/lib/filemanager/css/filemanager.min.css" rel="stylesheet" asp-append-version="true" />
+</head>
+<body>
+    <div class="container">
+        <div class="filemanager">
+            @*Thanh công cụ*@
+            <div class="fm-toolbox">
+            </div>
+
+            @*Cây thư mục*@
+            <div class="fm-folder-tree">
+            </div>
+
+            @*Hiển thị file*@
+            <div class="fm-main-panel">
+            </div>
+
+
+            @*Thông tin bổ xung*@
+            <div class="fm-additional-info">
+            </div>
+        </div>
+    </div>
+
+    <script defer src="~/lib/alpinejs/cdn.min.js"></script>
+    <script src="~/lib/filemanager/js/filemanager.js" asp-append-version="true"></script>
+</body>
+</html>
