--- a/FileManagers/FileManagers/wwwroot/lib/filemanager/css/filemanager.css
+++ b/FileManagers/FileManagers/wwwroot/lib/filemanager/css/filemanager.css
@@ -5,28 +5,28 @@
 }
 
 .filemanager {
-  height: 600px;
   display: grid;
-  grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: repeat(25, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 2px;
 }
 .filemanager > div {
   border: 1px solid red;
 }
 .filemanager > .fm-toolbox {
-  grid-column: 1/21;
-  grid-row: 1/3;
+  grid-column: 1/5;
+  grid-row: 1/2;
 }
 .filemanager > .fm-folder-tree {
-  grid-column: 1/6;
-  grid-row: 3/25;
+  grid-column: 1/2;
+  grid-row: 2/3;
 }
 .filemanager > .fm-main-panel {
-  grid-column: 6/21;
-  grid-row: 3/25;
+  grid-column: 1/5;
+  grid-row: 2/3;
+  height: 500px;
 }
 .filemanager > .fm-additional-info {
-  grid-column: 1/21;
-  grid-row: 25/26;
+  grid-column: 1/5;
+  grid-row: 3/4;
 }
