--- a/FileManagers/FileManagers/wwwroot/lib/filemanager/css/filemanager.scss
+++ b/FileManagers/FileManagers/wwwroot/lib/filemanager/css/filemanager.scss
@@ -1,5 +1,5 @@
 ﻿
-$fm-height: 600px;
+$fm-height: 500px;
 
 *{
     padding: 0;
@@ -12,29 +12,29 @@ $fm-height: 600px;
         border: 1px solid red;
     }
 
-    height: $fm-height;
     display: grid;
-    grid-template-columns: repeat(20, 1fr); //chia ra 20 cột bằng nhau
-    grid-template-rows: repeat(25, 1fr); //Dòng
+    grid-template-columns: repeat(4, 1fr); //chia ra 20 cột bằng nhau
+    grid-template-rows: repeat(3, auto); //Dòng
     gap: 2px; //cách các dòng và cột ra
 
     > .fm-toolbox {
-        grid-column: 1/21; //bắt đầu và kết thúc
-        grid-row: 1/3;
+        grid-column: 1/5; //bắt đầu và kết thúc
+        grid-row: 1/2;
     }
 
     > .fm-folder-tree {
-        grid-column: 1/6; //bắt đầu và kết thúc
-        grid-row: 3/25;
+        grid-column: 1/2; //bắt đầu và kết thúc
+        grid-row: 2/3;
     }
 
     > .fm-main-panel {
-        grid-column: 6/21; //bắt đầu và kết thúc
-        grid-row: 3/25;
+        grid-column: 1/5; //bắt đầu và kết thúc
+        grid-row: 2/3;
+        height: $fm-height;
     }
 
     > .fm-additional-info {
-        grid-column: 1/21; //bắt đầu và kết thúc
-        grid-row: 25/26;
+        grid-column: 1/5; //bắt đầu và kết thúc
+        grid-row: 3/4;
     }
 }
